<resources>
    <string name="app_name">Yummy</string>
    <string name="app_tagline">Gătește mai simplu, mănâncă mai bine, în fiecare zi</string>

    <!-- Navigație -->
    <string name="recipes_fragment">Rețete</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="search">Caută</string>

    <!-- Stări goale / erori -->
    <string name="no_internet_connection">Fără conexiune la internet</string>
    <string name="empty_favorites_title">Nicio rețetă favorită</string>
    <string name="empty_favorites_subtitle">Apasă pe inimioara unei rețete ca să o găsești aici mai târziu.</string>
    <string name="empty_recipes_title">Nicio rețetă găsită</string>
    <string name="empty_recipes_subtitle">Încearcă să schimbi filtrele sau caută altceva.</string>
    <string name="no_instructions_title">Fără instrucțiuni</string>
    <string name="error_title">Nu am putut încărca rețetele</string>
    <string name="error_generic">A apărut o eroare necunoscută. Încearcă din nou.</string>
    <string name="retry">Încearcă din nou</string>
    <string name="no_instructions_subtitle">Ne pare rău, această rețetă nu are pași de preparare disponibili.</string>

    <!-- Detaliu rețetă -->
    <string name="tab_overview">Prezentare</string>
    <string name="tab_ingredients">Ingrediente</string>
    <string name="tab_instructions">Preparare</string>
    <string name="add_to_favorites">Adaugă la favorite</string>
    <string name="remove_from_favorites">Elimină din favorite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_joke">Glumă</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
</resources>
